tests/fixtures/multi_module/valid/diamond/a.furqan
bismillah A {
    authority: NAMING_MD
    serves: purpose_hierarchy.balance_for_living_systems
    scope: top
    not_scope: nothing_excluded
}

tanzil a_deps {
    depends_on: B
    depends_on: C
}

fn placeholder() -> Integrity {
    return Integrity
}
